--- a/index.html
+++ b/index.html
@@ -1,56 +1,55 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <title>Заработок в интернете</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Заработок в интернете 2026 — Проверенные способы без вложений</title>
+  <link rel="stylesheet" href="style.css">
+  <!-- Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-T5086YL02K"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-T5086YL02K');
+  </script>
 </head>
-    <!-- Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-T5086YL02K"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-  gtag('config', 'G-T5086YL02K');
-</script>
-<!-- End Google Analytics -->
 <body>
+  <header>
+    <h1>💰 Заработок в интернете</h1>
+    <p>Проверенные способы для новичков в 2026 году</p>
+  </header>
 
-<header>
-    <h1>Заработок в интернете</h1>
-    <p>Проверенные способы для новичков</p>
-</header>
-
-<main>
+  <main>
     <section>
-        <h2>💰 Как начать зарабатывать</h2>
-        <p>Здесь ты найдёшь простые и рабочие способы заработка без вложений.</p>
+      <h2>🔥 Как начать зарабатывать</h2>
+      <p>Здесь ты найдёшь простые и рабочие способы заработка без вложений. Всё проверено — регистрируйся и начинай уже сегодня!</p>
     </section>
 
     <section>
-        <h2>🌐 Лучшие сайты</h2>
-        <ul>
-            <h2>Лучшие сайты для старта:</h2>
-<ul>
-  <li><a href="https://kwork.ru/" target="_blank">Kwork.ru — простые задания от 500 ₽</a></li>
-  <li><a href="https://www.fl.ru/" target="_blank">FL.ru — большая биржа фриланса для новичков</a></li>
-  <li><a href="https://upwork.com/" target="_blank">Upwork — международный фриланс (на английском)</a></li>
-  <li><a href="https://skillbox.ru/" target="_blank">Skillbox — курсы по дизайну, программированию и маркетингу</a></li>
-  <li><a href="https://netology.ru/" target="_blank">Netology — обучение востребованным профессиям</a></li>
-  <li><a href="https://www.avito.ru/" target="_blank">Avito — продажа вещей и услуг</a></li>
-</ul>
-            
-            
-        </ul>
+      <h2>🚀 Лучшие способы заработка без вложений:</h2>
+      <ul>
+        <li><a href="https://kwork.ru/" target="_blank">Kwork.ru — простые задания от 500 ₽</a></li>
+        <li><a href="https://www.fl.ru/" target="_blank">FL.ru — биржа фриланса для новичков</a></li>
+        <li><a href="https://upwork.com/" target="_blank">Upwork — международный фриланс</a></li>
+        <li><a href="https://skillbox.ru/" target="_blank">Skillbox — курсы по профессиям с трудоустройством</a></li>
+        <li><a href="https://netology.ru/" target="_blank">Netology — онлайн-обучение с нуля</a></li>
+        <li><a href="https://www.avito.ru/" target="_blank">Avito — продажа вещей и услуг</a></li>
+      </ul>
     </section>
-</main>
 
-<footer>
-    <p>© 2026 Мой сайт</p>
-</footer>
+    <section>
+      <h2>💊 Рекомендуем для здоровья</h2>
+      <p>Если болят суставы или спина — попробуйте Osteofast. Читатели уже заказали и благодарят!</p>
+      <ul>
+        <li><a href="#" target="_blank">Osteofast — крем от болей в суставах (акция!)</a></li>
+      </ul>
+      <p><small>После одобрения в KMA заменю на твою партнёрскую ссылку</small></p>
+    </section>
+  </main>
 
+  <footer>
+    <p>&copy; 2026 Мой сайт | Заработок без вложений</p>
+  </footer>
 </body>
 </html>
-
-
-
