--- a/index.html
+++ b/index.html
@@ -242,6 +242,23 @@
         closeModal();
       }
     }
+    <!-- modify this form HTML and place wherever you want your form -->
+<form
+  action="https://bannop2007-png.github.io/my-site/"
+  method="POST"
+>
+  <label>
+    Your email:
+    <input type="email" name="email">
+  </label>
+  <label>
+    Your message:
+    <textarea name="message"></textarea>
+  </label>
+  <!-- your other form fields go here -->
+  <button type="submit">Send</button>
+</form>
   </script>
 </body>
 </html>
+
