--- a/index.html
+++ b/index.html
@@ -4,341 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CreatorMind AI</title>
-    <style>
-        @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Space+Grotesk:wght@500;600&display=swap');
-
-        :root {
-            --purple: #6e56cf;
-            --purple-light: #bb86fc;
-            --bg-dark: #0a0a1a;
-            --text-light: #e0e0ff;
-        }
-
-        * { margin: 0; padding: 0; box-sizing: border-box; }
-        
-        body {
-            font-family: 'Inter', sans-serif;
-            background: linear-gradient(135deg, var(--bg-dark), #1a1a2e);
-            color: var(--text-light);
-            min-height: 100vh;
-            overflow-x: hidden;
-        }
-
-        header {
-            background: rgba(30, 30, 47, 0.95);
-            backdrop-filter: blur(10px);
-            padding: 20px 40px;
-            border-bottom: 3px solid var(--purple);
-            position: sticky;
-            top: 0;
-            z-index: 100;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .logo {
-            font-family: 'Space Grotesk', sans-serif;
-            font-size: 2em;
-            font-weight: 600;
-            color: var(--purple-light);
-            text-shadow: 0 0 20px rgba(110, 86, 207, 0.6);
-        }
-
-        nav a {
-            color: var(--text-light);
-            text-decoration: none;
-            font-weight: 500;
-            margin-left: 20px;
-            transition: color 0.3s;
-        }
-
-        nav a:hover {
-            color: var(--purple-light);
-        }
-
-        .hero {
-            max-width: 1200px;
-            margin: 80px auto 60px;
-            padding: 0 20px;
-            text-align: center;
-            animation: fadeIn 1.5s ease-out;
-        }
-
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(30px); }
-            to { opacity: 1; transform: translateY(0); }
-        }
-
-        .hero h1 {
-            font-size: 4em;
-            background: linear-gradient(90deg, #bb86fc, #6e56cf);
-            -webkit-background-clip: text;
-            -webkit-text-fill-color: transparent;
-            margin-bottom: 20px;
-            animation: glow 2s infinite alternate;
-        }
-
-        @keyframes glow {
-            0% { text-shadow: 0 0 10px rgba(110, 86, 207, 0.5); }
-            100% { text-shadow: 0 0 30px rgba(110, 86, 207, 0.8); }
-        }
-
-        .hero p {
-            font-size: 1.6em;
-            opacity: 0.85;
-            margin-bottom: 40px;
-            max-width: 800px;
-            margin-left: auto;
-            margin-right: auto;
-        }
-
-        .cta-button {
-            padding: 18px 50px;
-            font-size: 1.2em;
-            font-weight: 600;
-            background: linear-gradient(90deg, #6e56cf, #bb86fc);
-            border: none;
-            border-radius: 50px;
-            color: white;
-            cursor: pointer;
-            transition: all 0.4s;
-            box-shadow: 0 10px 20px rgba(110, 86, 207, 0.3);
-        }
-
-        .cta-button:hover {
-            transform: scale(1.05) translateY(-5px);
-            box-shadow: 0 20px 40px rgba(110, 86, 207, 0.5);
-        }
-
-        .register-section {
-            max-width: 500px;
-            margin: 0 auto 100px;
-            background: rgba(40, 40, 70, 0.4);
-            border-radius: 24px;
-            padding: 40px;
-            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.4);
-            border: 1px solid rgba(110, 86, 207, 0.2);
-            animation: fadeIn 1.8s ease-out 0.3s backwards;
-        }
-
-        .register-section h2 {
-            font-size: 2.2em;
-            color: var(--purple-light);
-            margin-bottom: 30px;
-            text-align: center;
-        }
-
-        .form-group {
-            margin-bottom: 25px;
-        }
-
-        label {
-            display: block;
-            font-size: 1.1em;
-            margin-bottom: 10px;
-            opacity: 0.9;
-        }
-
-        input[type="email"], input[type="password"] {
-            width: 100%;
-            padding: 16px 20px;
-            font-size: 1.1em;
-            background: rgba(255,255,255,0.08);
-            border: 2px solid rgba(110, 86, 207, 0.3);
-            border-radius: 12px;
-            color: white;
-            outline: none;
-            transition: all 0.3s;
-        }
-
-        input[type="email"]:focus, input[type="password"]:focus {
-            border-color: var(--purple-light);
-            box-shadow: 0 0 0 4px rgba(110, 86, 207, 0.2);
-        }
-
-        button[type="submit"] {
-            width: 100%;
-            padding: 18px;
-            font-size: 1.2em;
-            font-weight: 600;
-            background: linear-gradient(90deg, #6e56cf, #bb86fc);
-            border: none;
-            border-radius: 12px;
-            color: white;
-            cursor: pointer;
-            transition: all 0.3s;
-        }
-
-        button[type="submit"]:hover {
-            transform: translateY(-4px);
-            box-shadow: 0 15px 30px rgba(110, 86, 207, 0.4);
-        }
-
-        .generator {
-            max-width: 1200px;
-            margin: 0 auto 100px;
-            padding: 0 20px;
-            animation: fadeIn 2s ease-out 0.6s backwards;
-        }
-
-        .generator h2 {
-            font-size: 2.5em;
-            text-align: center;
-            margin-bottom: 40px;
-            color: var(--purple-light);
-        }
-
-        .input-group {
-            display: flex;
-            max-width: 800px;
-            margin: 0 auto 40px;
-            gap: 15px;
-        }
-
-        #niche {
-            flex: 1;
-            padding: 18px 24px;
-            font-size: 1.1em;
-            background: rgba(255,255,255,0.08);
-            border: 2px solid rgba(110, 86, 207, 0.3);
-            border-radius: 16px;
-            color: white;
-            outline: none;
-        }
-
-        #niche:focus {
-            border-color: var(--purple-light);
-        }
-
-        #generate-btn {
-            padding: 18px 42px;
-            font-size: 1.1em;
-            font-weight: 600;
-            background: linear-gradient(90deg, #6e56cf, #bb86fc);
-            border: none;
-            border-radius: 16px;
-            color: white;
-            cursor: pointer;
-            transition: all 0.3s;
-        }
-
-        #generate-btn:hover {
-            transform: translateY(-4px);
-            box-shadow: 0 15px 30px rgba(110, 86, 207, 0.4);
-        }
-
-        #loading {
-            display: none;
-            text-align: center;
-            padding: 30px;
-            font-size: 1.3em;
-            color: var(--purple-light);
-        }
-
-        .spinner {
-            width: 60px;
-            height: 60px;
-            border: 6px solid rgba(110, 86, 207, 0.2);
-            border-top-color: var(--purple-light);
-            border-radius: 50%;
-            animation: spin 1s linear infinite;
-            margin: 0 auto 20px;
-        }
-
-        @keyframes spin {
-            to { transform: rotate(360deg); }
-        }
-
-        #results {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 25px;
-            max-width: 1200px;
-            margin: 0 auto;
-        }
-
-        .idea-card {
-            background: rgba(50, 50, 80, 0.6);
-            border-radius: 18px;
-            padding: 25px;
-            display: flex;
-            flex-direction: column;
-            gap: 15px;
-            transition: all 0.4s;
-            border: 1px solid rgba(110, 86, 207, 0.15);
-            animation: cardFadeIn 0.8s ease-out forwards;
-            opacity: 0;
-            transform: translateY(20px);
-        }
-
-        .idea-card:nth-child(1) { animation-delay: 0.1s; }
-        .idea-card:nth-child(2) { animation-delay: 0.2s; }
-        /* ... добавить для остальных по аналогии */
-
-        @keyframes cardFadeIn {
-            to { opacity: 1; transform: translateY(0); }
-        }
-
-        .idea-card:hover {
-            transform: translateY(-10px) scale(1.02);
-            background: rgba(110, 86, 207, 0.25);
-            border-color: var(--purple-light);
-            box-shadow: 0 20px 40px rgba(110, 86, 207, 0.3);
-        }
-
-        .idea-number {
-            background: var(--purple);
-            color: white;
-            width: 45px;
-            height: 45px;
-            border-radius: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-weight: 700;
-            font-size: 1.2em;
-            align-self: flex-start;
-        }
-
-        .idea-text {
-            line-height: 1.6;
-            font-size: 1.1em;
-        }
-
-        .copy-btn {
-            background: rgba(255,255,255,0.1);
-            border: none;
-            padding: 12px;
-            border-radius: 12px;
-            color: white;
-            cursor: pointer;
-            font-size: 1.3em;
-            transition: 0.3s;
-            align-self: flex-end;
-        }
-
-        .copy-btn:hover {
-            background: #bb86fc;
-            transform: scale(1.1);
-        }
-
-        footer {
-            text-align: center;
-            padding: 40px;
-            color: #888;
-            font-size: 0.95em;
-            border-top: 1px solid rgba(110, 86, 207, 0.2);
-        }
-
-        @media (max-width: 768px) {
-            .hero h1 { font-size: 2.8em; }
-            .hero p { font-size: 1.3em; }
-            .input-group { flex-direction: column; gap: 20px; }
-            header { padding: 15px 20px; }
-            .register-section { padding: 30px 20px; }
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -400,9 +66,7 @@
         e.preventDefault();
         const email = document.getElementById('email').value;
         const password = document.getElementById('password').value;
-        // Здесь можно добавить логику: сохранить в localStorage или отправить на сервер
         alert(`Регистрация успешна! Email: ${email}`);
-        // Очистить форму
         this.reset();
     });
 
@@ -446,9 +110,9 @@
             const ideas = generateMockIdeas(niche);
             let html = '';
             
-            ideas.forEach(idea => {
+            ideas.forEach((idea, index) => {
                 html += `
-                <div class="idea-card">
+                <div class="idea-card" style="animation-delay: ${index * 0.1}s;">
                     <div class="idea-number">${idea.split('.')[0]}</div>
                     <div class="idea-text">${idea.split('. ').slice(1).join('. ')}</div>
                     <button class="copy-btn" onclick="copyIdea(this)">📋</button>
