--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CreatorMind AI - Главная</title>
+    <title>CreatorMind AI - Регистрация</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="dark-theme">
@@ -39,17 +39,9 @@
         </div>
         
         <div class="site-info">
-            <h2>Добро Пожаловать в CreatorMind AI!</h2>
-            <p>CreatorMind AI — это элегантный ИИ-помощник для креаторов. Мы помогаем генерировать 20 убойных идей контента мгновенно для Telegram, TikTok, YouTube Shorts и других платформ.</p>
-            <ul>
-                <li>🚀 Мгновенная генерация идей для постов, рилсов, сторис</li>
-                <li>💡 Персонализированные советы по нишам: заработок, мотивация, похудение и многое другое</li>
-                <li>🔒 Безопасная регистрация и хранение данных</li>
-                <li>🌐 Доступ с любого устройства</li>
-                <li>🎨 Темы: тёмная (для ночных сов) или светлая (для дневных воинов)</li>
-                <li>📈 Монетизация: Продавай идеи или используй для своего канала</li>
-            </ul>
-            <p>Присоединяйся к тысячам креаторов в 2026 году и сделай свой контент вирусным! Подробнее на <a href="about.html">странице О Нас</a>.</p>
+            <h2>Добро Пожаловать!</h2>
+            <p>CreatorMind AI — элегантный ИИ для креаторов. Зарегистрируйся, чтобы генерировать идеи контента за секунды.</p>
+            <p>После регистрации откроется доступ к генератору. Подробнее — на <a href="about.html">странице О Нас</a>.</p>
         </div>
     </section>
 </main>
