--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CreatorMind AI - Регистрация</title>
+    <title>CreatorMind AI - Генератор Идей</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body class="dark-theme">
@@ -13,36 +13,28 @@
 <header>
     <div class="logo">CreatorMind AI</div>
     <nav>
+        <a href="index.html">Регистрация</a>
         <a href="about.html">О Нас</a>
-        <a href="generator.html">Генератор</a>
         <a href="contacts.html">Контакты</a>
     </nav>
     <button id="theme-toggle" onclick="toggleTheme()">🌙</button>
 </header>
 
-<main class="landing-page">
-    <section class="register-container">
-        <div class="register-form">
-            <h2>Регистрация</h2>
-            <form id="register-form">
-                <div class="form-group">
-                    <label for="email">Email</label>
-                    <input type="email" id="email" placeholder="Твой email..." required>
-                </div>
-                <div class="form-group">
-                    <label for="password">Пароль</label>
-                    <input type="password" id="password" placeholder="Придумай пароль..." required>
-                </div>
-                <button type="submit">Зарегистрироваться</button>
-            </form>
-            <p class="login-link">Уже есть аккаунт? <a href="#" onclick="simulateLogin()">Вход</a></p>
+<main class="generator-page">
+    <section class="generator">
+        <h2 class="gradient-title">Генерируй Идеи Контента</h2>
+        <p class="intro-text">Введи нишу и получи 20 креативных идей для постов, видео или сторис. Всё мгновенно и элегантно!</p>
+        <div class="input-group">
+            <input type="text" id="niche" placeholder="Введи нишу (например: заработок в Telegram, мотивация, похудение...)">
+            <button id="generate-btn" onclick="generateIdeas()">Сгенерировать</button>
         </div>
-        
-        <div class="site-info">
-            <h2>Добро Пожаловать!</h2>
-            <p>CreatorMind AI — элегантный ИИ для креаторов. Зарегистрируйся, чтобы генерировать идеи контента за секунды.</p>
-            <p>После регистрации откроется доступ к генератору. Подробнее — на <a href="about.html">странице О Нас</a>.</p>
+
+        <div id="loading">
+            <div class="spinner"></div>
+            <p>ИИ творит магию над твоей нишей...</p>
         </div>
+
+        <div id="results" class="results-grid"></div>
     </section>
 </main>
 
