--- a/index.html
+++ b/index.html
@@ -1,47 +1,21 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html>
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CreatorMind AI - Генератор Идей</title>
+    <title>CreatorMind AI</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body class="dark-theme">
+<body>
 
-<div class="animated-bg"></div>
+    <div class="container">
+        <h1>CreatorMind AI</h1>
 
-<header>
-    <div class="logo">CreatorMind AI</div>
-    <nav>
-        <a href="index.html">Регистрация</a>
-        <a href="about.html">О Нас</a>
-        <a href="contacts.html">Контакты</a>
-    </nav>
-    <button id="theme-toggle" onclick="toggleTheme()">🌙</button>
-</header>
+        <input type="text" id="nicheInput" placeholder="Enter your niche">
+        <button onclick="generateIdeas()">Generate Ideas</button>
 
-<main class="generator-page">
-    <section class="generator">
-        <h2 class="gradient-title">Генерируй Идеи Контента</h2>
-        <p class="intro-text">Введи нишу и получи 20 креативных идей для постов, видео или сторис. Всё мгновенно и элегантно!</p>
-        <div class="input-group">
-            <input type="text" id="niche" placeholder="Введи нишу (например: заработок в Telegram, мотивация, похудение...)">
-            <button id="generate-btn" onclick="generateIdeas()">Сгенерировать</button>
-        </div>
+        <div id="results"></div>
+    </div>
 
-        <div id="loading">
-            <div class="spinner"></div>
-            <p>ИИ творит магию над твоей нишей...</p>
-        </div>
-
-        <div id="results" class="results-grid"></div>
-    </section>
-</main>
-
-<footer>
-    CreatorMind AI © 2026 • Сделано с ❤️ в Баку для креаторов по всему миру • <a href="contacts.html">Контакты: support@creatormind.ai</a>
-</footer>
-
-<script src="script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
